syntax = "proto3";
package forge_abi;

import "google/protobuf/any.proto";
import "type.proto";

message TransferTx {
  string to = 1;
  BigUint value = 2;
  repeated string assets = 3;

  // forge won't touch this field. Only forge app shall handle it.
  google.protobuf.Any data = 15;
}
